Fix embedded YouVersion on mobile

--- a/static/less/common.less
+++ b/static/less/common.less
@@ -271,7 +271,7 @@ input {
 .z5 { z-index: 500; }
 
 .scrolly {
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
 .scrollx {
